update imei validation, remove expired warranty fake test

--- a/spec/fixtures/response_without_warranty.html
+++ b/spec/fixtures/response_without_warranty.html
@@ -473,7 +473,7 @@ var hasErrors = false;
 Event.observe(window, 'load', function() {
 
 warrantyPage = new WCPage();
-warrantyPage.warrantycheck.initialize(335829);
+warrantyPage.warrantycheck.initialize(250874);
 
 
 
@@ -491,15 +491,15 @@ warrantyPage.warrantycheck.initialize(335829);
                  $('registration-text').update(regTextKeyLong);
                  warrantyPage.setClassAndShow('registration', 'green', 'registration-true');
 
-                 warrantyPage.warrantycheck.displayProductInfo('https://km.support.apple.com.edgekey.net/kb/securedImage.jsp?configcode=FFHG&size=72x72', 'iPhone 5c', true,'013896000639712', false, '', 'USE IMEI NUMBER');
+                 warrantyPage.warrantycheck.displayProductInfo('https://km.support.apple.com.edgekey.net/kb/securedImage.jsp?configcode=F193&size=72x72', 'iPad mini Wi-Fi', false,'DQTJRT2YF193', false, '', 'DQTJRT2YF193');
 
-                 warrantyPage.warrantycheck.displayPHSupportInfo( false, 'Telephone Technical Support: Expired', 'You are eligible to purchase telephone technical support from an Apple Advisor.', 'https://getsupport.apple.com/GetproductgroupList.do?serialno=013896000639712&locale=en_US');
+                 warrantyPage.warrantycheck.displayPHSupportInfo( false, 'Telephone Technical Support: Expired', 'You are eligible to purchase telephone technical support from an Apple Advisor.', 'https://getsupport.apple.com/GetproductgroupList.do?serialno=DQTJRT2YF193&locale=en_US');
 
-                 warrantyPage.warrantycheck.displayHWSupportInfo(false, 'Repairs and Service Coverage: Expired', 'Our records indicate that your product is not covered under Apple&#039;s 1-year limited warranty or AppleCare Protection Plan for hardware repairs and service based on the estimated expiration date. <br/><a href="http://support.apple.com/kb/he44">Learn about Apple&#039;s coverage information for your product.</a>', 'https://getsupport.apple.com/GetproductgroupList.do?serialno=013896000639712&locale=en_US','');
+                 warrantyPage.warrantycheck.displayHWSupportInfo(false, 'Repairs and Service Coverage: Expired', 'Our records indicate that your product is not covered under Apple&#039;s 1-year limited warranty or AppleCare Protection Plan for hardware repairs and service based on the estimated expiration date. <br/><a href="http://support.apple.com/kb/he44">Learn about Apple&#039;s coverage information for your product.</a>', 'https://getsupport.apple.com/GetproductgroupList.do?serialno=DQTJRT2YF193&locale=en_US','');
 
-                 warrantyPage.warrantycheck.displayEligibilityInfo('OO', false, '', '013896000639712', 'We&#039;re sorry, but this product is not eligible for an AppleCare agreement.', '/AgrOfferFlow.do','USA','APP','oesBxmqd7Pfs1TpmV2ejSg==', false);
+                 warrantyPage.warrantycheck.displayEligibilityInfo('OO', false, '', 'DQTJRT2YF193', 'We&#039;re sorry, but this product is not eligible for an AppleCare agreement.', '/AgrOfferFlow.do','USA','APP','oesBxmqd7Pf7SX0OLWHFHg==', false);
 
-                 warrantyPage.warrantycheck.displayDisputeInfo('<div class="sosumi">If you believe the information shown for your product is incorrect, you can <a href="https://getsupport.apple.com/GetproductgroupList.do?caller=wc&PGF=PGF66001&category_id=SC0200&locale=en_US&sn=013896000639712" id="hardware-epop" target="_blank">submit your proof of purchase online</a>. Your sales receipt is needed for Apple&#039;s Limited warranty, AppleCare Protection Plan, and AppleCare+ validation, so be sure to keep it in a safe place.  Apple&#039;s Limited warranty is the same whether or not you register. <br /><br /><FONT COLOR="black"><b>Important:</b> Apple&#039;s Limited warranty, AppleCare Protection Plan, and AppleCare+ benefits are in addition to rights provided by consumer law. For details, <a href="http://www.apple.com/legal/warranty/Additional_Legal_Rights_for_Consumers.html" target="_blank">click here</a>. If you believe you have a valid consumer law claim, please <a href="http://support.apple.com/kb/HE57">contact us</a>.</FONT></div>');
+                 warrantyPage.warrantycheck.displayDisputeInfo('<div class="sosumi">If you believe the information shown for your product is incorrect, you can <a href="https://getsupport.apple.com/GetproductgroupList.do?caller=wc&PGF=PGF66001&category_id=SC0200&locale=en_US&sn=DQTJRT2YF193" id="hardware-epop" target="_blank">submit your proof of purchase online</a>. Your sales receipt is needed for Apple&#039;s Limited warranty, AppleCare Protection Plan, and AppleCare+ validation, so be sure to keep it in a safe place.  Apple&#039;s Limited warranty is the same whether or not you register. <br /><br /><FONT COLOR="black"><b>Important:</b> Apple&#039;s Limited warranty, AppleCare Protection Plan, and AppleCare+ benefits are in addition to rights provided by consumer law. For details, <a href="http://www.apple.com/legal/warranty/Additional_Legal_Rights_for_Consumers.html" target="_blank">click here</a>. If you believe you have a valid consumer law claim, please <a href="http://support.apple.com/kb/HE57">contact us</a>.</FONT></div>');
 
 
                //Begin:Added json Object:Espressp #14774083
@@ -510,8 +510,8 @@ warrantyPage.warrantycheck.initialize(335829);
                 				'hasActiveAPP':             false,
                 				'isAPPEligible' :           false,
                 				'isPPIEligible' :           false,
-                				'productType' :             'iPhone',
-                				'numDaysSinceDOP':          '399',
+                				'productType' :             'iPad',
+                				'numDaysSinceDOP':          '874',
                 				'hasTechToolDownload':       false
                 	};
 
